
Tue Feb 19 13:38:10 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_cvar_set): define new class variable if it's not
	  defined yet.

	* eval.c (rb_eval_string_wrap): should hide the toplevel local
	  variable bindings by PUSH_SCOPE().

Tue Feb 19 13:16:08 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* io.c (rb_io_ungetc): don't fail pushed EOF back.

Mon Feb 18 13:56:44 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (block_pass): "&nil" should clear block given.

Fri Feb 15 13:36:58 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_rshift): should properly convert the nagative
	  value to 2's compliment.

Tue Feb 12 01:21:34 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (assignable): should emit CVASGN within the method
	  body.

Mon Feb 11 00:10:41 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* regex.c (re_compile_fastmap): skip begpos.

Sun Feb 10 16:52:53 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ruby.c (load_file): avoid SEGV on '#' only input.

Fri Feb  8 23:07:23 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): singleton chech should be moved from yycompile
	  to here.

	* eval.c (is_defined): check should be added here too.

Fri Feb  8 05:39:15 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: HTTP.Proxy should use self for proxy-class's
	  super class.

	* lib/net/http.rb: initialize HTTP.proxy_port by HTTP.port.

Fri Feb  8 01:27:33 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yycompile): should inherit "in_single" if eval happened
	  in a singleton method.

	* eval.c (rb_eval): class variables from singleton methods defined
	  within singleton class statement should work like ones defined
	  by sington def statements.

Thu Feb 07 13:44:08 2002  akira yamada  <akira@arika.org>

	* uri/common.rb (URI::join): new method.

	* uri/generic.rb (Generic#merge): URI.parse("http://a/")+"b" should