@@ -70,6 +70,13 @@ Tue Feb 19 13:16:08 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
 
 	* io.c (rb_io_ungetc): don't fail pushed EOF back.
 
+Mon Feb 18 14:23:10 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
+
+	* misc/ruby-mode.el (ruby-modifier-re): add rescue modifier.
+
+	* misc/ruby-mode.el (ruby-font-lock-keywords): fontify
+	  instance/class/global variables start with '_'.
+
 Mon Feb 18 13:56:44 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* eval.c (block_pass): "&nil" should clear block given.
